# ri_one_master_ws

./: .gitignore  README.md  frames_2026-04-17_21.15.34.gv  frames_2026-04-17_21.23.38.gv  frames_2026-04-17_21.25.04.gv  frames_2026-04-17_21.26.50.gv  my_map.pgm  my_map.yaml  requirements.txt
install/: local_setup.sh  setup.sh
install/audio_common/share/audio_common/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/audio_common_msgs/share/audio_common_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cmd_vel_mux/include/cmd_vel_mux/: cmd_vel_mux.hpp
install/cmd_vel_mux/lib/cmd_vel_mux/: cmd_vel_mux_node
install/cmd_vel_mux/share/cmd_vel_mux/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ecl_command_line/include/ecl/: command_line.hpp
install/ecl_command_line/lib/ecl_command_line/: demo_command_line
install/ecl_command_line/share/ecl_command_line/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ecl_concepts/include/ecl/: concepts.hpp
install/ecl_concepts/share/ecl_concepts/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ecl_config/include/ecl/: config.hpp
install/ecl_config/share/ecl_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ecl_console/share/ecl_console/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ecl_containers/include/ecl/: containers.hpp
install/ecl_containers/lib/ecl_containers/: demo_formatters
install/ecl_containers/share/ecl_containers/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ecl_converters/include/ecl/: converters.hpp
install/ecl_converters/lib/ecl_converters/: demo_float_converters
install/ecl_devices/lib/: libecl_devices.so.1.2.1
install/ecl_exceptions/lib/: libecl_exceptions.so.1.2.1
install/ecl_filesystem/lib/: libecl_filesystem.so.1.2.1
install/ecl_formatters/lib/: libecl_formatters.so.1.2.1
install/ecl_geometry/lib/: libecl_geometry.so.1.2.1
install/ecl_io/lib/: libecl_io.so.1.2.0
install/ecl_ipc/lib/: libecl_ipc.so.1.2.1
install/ecl_linear_algebra/lib/: libecl_linear_algebra.so.1.2.1
install/ecl_manipulators/lib/: libecl_manipulators.so.1.2.1
install/ecl_mobile_robot/lib/: libecl_mobile_robot.so.1.2.1
install/ecl_streams/lib/: libecl_streams.so.1.2.1
install/ecl_threads/lib/: libecl_threads.so.1.2.1
install/ecl_time/lib/: libecl_time.so.1.2.1
install/ecl_time_lite/lib/: libecl_time_lite.so.1.2.0
install/kobuki_core/include/: CMakeLists.txt
install/kobuki_core/lib/: libkobuki_core.so.1.4.0
log/: latest_build
src/follow_me_robot/: package.xml  setup.py
src/follow_me_robot/config/: my_cartographer.lua
src/follow_me_robot/follow_me_robot/: follow_node.py
src/follow_me_robot/launch/: bringup.launch.py  cartographer.launch.py
src/gesture_detection/: package.xml  setup.py
src/gesture_detection/gesture_detection/: open_palm_detector.py
src/gesture_to_motion/: package.xml  setup.cfg  setup.py
src/gesture_to_motion/gesture_to_motion/: gesture_to_motion.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/kinect_ros2/: CMakeLists.txt  package.xml
src/kinect_ros2/include/kinect_ros2/: kinect_ros2_component.hpp
src/kinect_ros2/src/: kinect_ros2_component.cpp
src/log/: latest_build
src/nlp_system/: package.xml  setup.cfg  setup.py
src/nlp_system/launch/: nlp_system.launch.py
src/nlp_system/nlp_system/: asr_node.py  dialogue_manager.py  nlp_node.py  task_planner_node.py  temp_temp.py
src/paper_bag_detection-main/: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/paper_bag_detection-main/paper_bag_detection/: bag_pub_node.py  paper_bag.py  pub_sub_node.py  real_to_bag.py  test.py
src/person_perception/: README.md  package.xml  requirements.txt  setup.py
src/person_perception/config/: objects.yaml
src/person_perception/data/faces/: brandon_embed.npy  jonathan_embed.npy  ken_embed.npy  sandeep_embed.npy  sandeepmask_embed.npy
src/person_perception/launch/: perception_system.launch.py
src/person_perception/person_perception/: __init__.py
src/person_perception/person_perception/core/: __init__.py  identity.py  metrics.py  vision.py
src/person_perception/person_perception/nodes/: __init__.py  person_node.py  person_tracker_node.py  task_planner_node.py  vision_node.py
src/person_perception/tools/: __init__.py  mock_nlp_node.py  register_face.py  run_live_system.py  run_standalone.py
src/person_targetting/: package.xml  setup.cfg  setup.py
src/person_targetting/person_targetting/: person_targetting_node.py
src/realsense_vision/: package.xml  setup.cfg  setup.py
src/realsense_vision/realsense_vision/: gesture_identification_node.py  realsense_vision_node.py
src/receptionist_system/: package.xml  setup.cfg  setup.py
src/receptionist_system/launch/: receptionist.launch.py
src/receptionist_system/receptionist_system/: asr_node.py  dialogue_manager.py  dialogue_manager_test.py  nlp_node.py  task_planner_node.py  task_planner_node_true.py  tts_node.py  vision_node.py  vision_node_true.py
src/ros2_kinect_depth/: CMakeLists.txt
src/ros2_kinect_depth/src/: depth_node.cpp
src/ros2_kinect_led/: CMakeLists.txt
src/ros2_kinect_led/src/: ros2_kinect_led_node.cpp
src/ros2_kinect_mic/: CMakeLists.txt
src/ros2_kinect_mic/src/: ros2_kinect_mic_node.cpp
src/ros2_kinect_rgb/: CMakeLists.txt
src/ros2_kinect_rgb/src/: rgb_node.cpp
src/ros2_kinect_tilt/: CMakeLists.txt
src/ros2_kinect_tilt/src/: ros2_kinect_tilt_node.cpp
src/ros2_tests/: package.xml  setup.cfg  setup.py
src/ros2_tests/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ros2_tests/log/: latest_build
src/ros2_tests/ros2_tests/: led_test.py  rgb_viewer.py
(+2147 files in other folders)
