cmake_minimum_required(VERSION 3.8)
project(ros2_kinect_mic_node)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(audio_common_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(FREENECT REQUIRED libfreenect)
include_directories(${FREENECT_INCLUDE_DIRS})

include_directories(
  include
  ${FREENECT_INCLUDE_DIRS}
)

link_directories(${FREENECT_LIBRARY_DIRS})
add_executable(ros2_kinect_mic_node_node src/ros2_kinect_mic_node.cpp)
ament_target_dependencies(ros2_kinect_mic_node_node rclcpp audio_common_msgs)
target_link_libraries(ros2_kinect_mic_node_node ${FREENECT_LIBRARIES})

install(TARGETS
  ros2_kinect_mic_node_node
  DESTINATION lib/${PROJECT_NAME}
)
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
